Fix OpenJarThread thing